darken secondary gray a bit to fix contrast issues

--- a/theme/scriptsearch.less
+++ b/theme/scriptsearch.less
@@ -13,6 +13,7 @@
     .ui.card {
         height: 20rem;
         .ui.cardimage {
+            background-color: transparent;
             height: 11rem;
         }
         .content:not(.extra) {
